Fixed wave heading heirarchy issue

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="utf-8">
         <title>Richie | Home</title>
         <link rel="stylesheet" href="css/style.css">
@@ -11,16 +11,15 @@
     </head>
 <body>
     <div id="wrapper">
-
         <header>
             <h1>Richie B. - portfolio</h1>
             <nav>
-                <h4>
+                <div class="h4">
                     <a href="index.html">Home</a> |
                     <a href="about.html">About Me</a> |
                     <a href="projects.html">Projects</a> |
                     <a href="contact.html">Contact Me </a>
-                </h4>
+                </div>
             </nav>
         </header>
         <main>
@@ -30,17 +29,17 @@
             </article>
         </main>
         <footer>
-            <h5>Thanks for visiting!</h5>
+            <h3>Thanks for visiting!</h3>
             <nav>
-                <h4>
+                <div class="h4">
                     <a href="index.html">Home</a> |
                     <a href="about.html">About Me</a> |
                     <a href="projects.html">Projects</a> |
                     <a href="contact.html">Contact Me</a> |
-                </h4>
+                </div>
             </nav>
             <address>
-                <p>Contact me at <a href="mailto:yourname@email.com">yourname@email.com</a></p>
+                <p>Contact me at <a href="mailto:richiebazuaye@gmail.com">richiebazuaye@gmail.com</a></p>
             </address>
             <p style="margin: left 15px;">&copy; 2025 Richie B. </p>
         </footer>
