Modified heading in about page to fix wave issue

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="utf-8">
         <title>Richie | About</title>
         <link rel="stylesheet" href="css/style.css">
@@ -15,12 +15,12 @@
             <header>
                 <h1>About Me</h1>
                 <nav>
-                    <h4>
+                    <div class="h4">
                         <a href="index.html">Home</a> |
                         <a href="about.html">About Me</a> |
                         <a href="projects.html">Projects</a> |
                         <a href="contact.html">Contact Me</a>
-                    </h4>
+                    </div>
                 </nav>
             </header>
             <main>
@@ -38,9 +38,9 @@
                 </article>
             </main>
             <footer>
-                <h5> About Page</h5>
+                <h4 class=""> About Page</h4>
                 <address>
-                    <p>Contact me at <a href="mailto:yourname@email.com">yourname@email.com</a></p>
+                    <p>Contact me at <a href="mailto:richiebazuaye@gmail.com">richiebazuaye@gmail.com</a></p>
                 </address>
                 <p style="margin-left: 15px;">&copy; 2025 Richie B.</p>
             </footer>
