--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="utf-8">
         <title>Richie | Contact</title>
         <link rel="stylesheet" href="css/style.css">
@@ -14,12 +14,12 @@
             <header>
                 <h1>Contact Me</h1>
                 <nav>
-                    <h4>
+                    <div class="h4">
                         <a href="index.html">Home</a> |
                         <a href="about.html">About Me</a> |
                         <a href="projects.html">Projects</a> |
                         <a href="contact.html">Contact Me </a>
-                    </h4>
+                    </div>
                 </nav>
             </header>
             <main>
@@ -49,9 +49,9 @@
                 </article>
             </main>
             <footer>
-                <h5>Contact Page</h5>
+                <h3>Contact Page</h3>
                 <address>
-                    <p>Contact me at <a href="mailto:yourname@gmail.com">yourname@email.com</a></p>
+                    <p>Contact me at <a href="mailto:richiebazuaye@gmail.com">richiebazuaye@gmail.com</a></p>
                 </address>
                 <p style="margin-left:15px;">&copy; 2025 Richie B.</p>
             </footer>
