Fix last wave issues and modified css with .h4

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="utf-8">
         <title>Richie | Projects</title>
         <link rel="stylesheet" href="css/style.css">
@@ -14,43 +14,43 @@
             <header>
                 <h1>Projects</h1>
                 <nav>
-                    <h4>
+                    <div class="h4">
                         <a href="index.html">Home</a> |
                         <a href="about.html">About Me</a> |
                         <a href="projects.html">Projects</a> |
                         <a href="contact.html">Contact Me</a>
-                    </h4>
+                    </div>
                 </nav>
             </header>
             <main>
                 <article>
                     <h2>What I have built</h2>
                     <section>
-                        <h3>portfolio v1</h3>
-                        <p>My first HTML/CSS page using a wrapper and simple styles. I learned semantic tags.</p>
+                        <h3>Portfolio v1</h3>
+                        <p>This is my first HTML/CSS page where I explored the basics of web development. I used a wrapper to organize the layout and applied simple styling to enhance the design. During this project, I focused on learning and implementing semantic HTML tags, which helped me improve the structure and accessibility of the page. It was a great opportunity to understand how different elements work together to create a functional and visually appealing webpage.</p>
                     </section>
                     <section>
                         <h3>Video Page</h3>
-                        <p>Embedded an HTML5 video with controls and posters. Tested MP4 and OGV.</p>
+                        <p>For this project, I embedded an HTML5 video on the page with built-in controls, allowing users to play, pause, and adjust the volume. I also added poster images for a cleaner and more engaging user experience before the video starts playing. To ensure cross-browser compatibility, I tested the video with both MP4 and OGV formats, making sure it would work smoothly across different platforms. This gave me hands-on experience with multimedia elements in HTML5 and taught me how to enhance the functionality of a webpage with media.</p>
                     </section>
                     <section>
                         <h3>Form Practice</h3>
-                        <p>Made a contact form with required fields and email validation.</p>
+                        <p>In this project, I created a contact form with required fields to ensure users provide essential information before submitting. I implemented basic email validation to ensure that users input a valid email address format, reducing the chances of errors or incomplete submissions. This experience helped me understand form validation principles and the importance of user-friendly error handling. It also gave me hands-on experience with input types, attributes like "required" and "pattern", and leveraging JavaScript to improve user interaction and data integrity.</p>
                     </section>
                     <section>
                         <h3>Mini Layout</h3>
-                        <p>Practice headings, lists, and a basic two-column look without flexbox</p>
+                        <p>In this exercise, I practiced using HTML headings and lists to organize content and improve the structure of a webpage. I experimented with different heading levels (h1 to h6) to understand their role in both content hierarchy and accessibility. Additionally, I worked on creating a simple two-column layout using basic CSS, avoiding flexbox for this project. Instead, I used techniques like float and width properties to arrange the content side by side. This approach helped me understand the foundational principles of CSS layout before diving into more complex tools like Flexbox or Grid.</p>
                     </section>
                     <section>
                         <h3>CSS Experiments</h3>
-                        <p>Played with borders,shadows, and simple hover changes.</p>
+                        <p>In this part of my project, I had fun experimenting with CSS borders, shadows, and hover effects to add interactivity and visual appeal to the page. I played with different border styles, thicknesses, and colors to define sections clearly. I also explored box-shadow and text-shadow properties to give elements a subtle 3D effect, making them stand out. For the hover effects, I applied simple changes like color transitions and scaling to create a more dynamic user experience. This helped me better understand how small styling tweaks can enhance both the design and usability of a website.</p>
                     </section>
                 </article>
             </main>
             <footer>
-                <h5> Projects Page</h5>
+                <h4> Projects Page</h4>
                 <address>
-                    <p>Contact me at <a href="mailto:yourname@email.com">yourname@email.com</a></p>
+                    <p>Contact me at <a href="mailto:richiebazuaye@gmail.com">richiebazuaye@gmail.com</a></p>
 
                 </address>
                 <p style="margin-left: 15px;">&copy; 2025 Richie B.</p>
